Package_Tools/include_C/include/SDL3/SDL_iostream.h


typedef enum SDL_IOStatus
{
    SDL_IO_STATUS_READY,     
    SDL_IO_STATUS_ERROR,     
    SDL_IO_STATUS_EOF,       
    SDL_IO_STATUS_NOT_READY, 
    SDL_IO_STATUS_READONLY,  
    SDL_IO_STATUS_WRITEONLY  
} SDL_IOStatus;
typedef enum SDL_IOWhence
{
    SDL_IO_SEEK_SET,  
    SDL_IO_SEEK_CUR,  
    SDL_IO_SEEK_END   
} SDL_IOWhence;
typedef struct SDL_IOStreamInterface
{
    Uint32 version;
    Sint64 ( *size)(void *userdata);
    Sint64 ( *seek)(void *userdata, Sint64 offset, SDL_IOWhence whence);
    size_t ( *read)(void *userdata, void *ptr, size_t size, SDL_IOStatus *status);
    size_t ( *write)(void *userdata, const void *ptr, size_t size, SDL_IOStatus *status);
    bool ( *flush)(void *userdata, SDL_IOStatus *status);
    bool ( *close)(void *userdata);
} SDL_IOStreamInterface;
typedef struct SDL_IOStream SDL_IOStream;
extern  SDL_IOStream *  SDL_IOFromFile(const char *file, const char *mode);
#define SDL_PROP_IOSTREAM_WINDOWS_HANDLE_POINTER    "SDL.iostream.windows.handle"
#define SDL_PROP_IOSTREAM_STDIO_FILE_POINTER        "SDL.iostream.stdio.file"
#define SDL_PROP_IOSTREAM_ANDROID_AASSET_POINTER    "SDL.iostream.android.aasset"
extern  SDL_IOStream *  SDL_IOFromMem(void *mem, size_t size);
extern  SDL_IOStream *  SDL_IOFromConstMem(const void *mem, size_t size);
extern  SDL_IOStream *  SDL_IOFromDynamicMem(void);
#define SDL_PROP_IOSTREAM_DYNAMIC_MEMORY_POINTER    "SDL.iostream.dynamic.memory"
#define SDL_PROP_IOSTREAM_DYNAMIC_CHUNKSIZE_NUMBER  "SDL.iostream.dynamic.chunksize"
extern  SDL_IOStream *  SDL_OpenIO(const SDL_IOStreamInterface *iface, void *userdata);
extern  bool  SDL_CloseIO(SDL_IOStream *context);
extern  SDL_PropertiesID  SDL_GetIOProperties(SDL_IOStream *context);
extern  SDL_IOStatus  SDL_GetIOStatus(SDL_IOStream *context);
extern  Sint64  SDL_GetIOSize(SDL_IOStream *context);
extern  Sint64  SDL_SeekIO(SDL_IOStream *context, Sint64 offset, SDL_IOWhence whence);
extern  Sint64  SDL_TellIO(SDL_IOStream *context);
extern  size_t  SDL_ReadIO(SDL_IOStream *context, void *ptr, size_t size);
extern  size_t  SDL_WriteIO(SDL_IOStream *context, const void *ptr, size_t size);
extern  size_t  SDL_IOprintf(SDL_IOStream *context, SDL_PRINTF_FORMAT_STRING const char *fmt, ...)  SDL_PRINTF_VARARG_FUNC(2);
extern  size_t  SDL_IOvprintf(SDL_IOStream *context, SDL_PRINTF_FORMAT_STRING const char *fmt, va_list ap) SDL_PRINTF_VARARG_FUNCV(2);
extern  void *  SDL_LoadFile_IO(SDL_IOStream *src, size_t *datasize, bool closeio);
extern  void *  SDL_LoadFile(const char *file, size_t *datasize);
extern  bool  SDL_ReadU8(SDL_IOStream *src, Uint8 *value);
extern  bool  SDL_ReadU16LE(SDL_IOStream *src, Uint16 *value);
extern  bool  SDL_ReadS16LE(SDL_IOStream *src, Sint16 *value);
extern  bool  SDL_ReadU16BE(SDL_IOStream *src, Uint16 *value);
extern  bool  SDL_ReadS16BE(SDL_IOStream *src, Sint16 *value);
extern  bool  SDL_ReadU32LE(SDL_IOStream *src, Uint32 *value);
extern  bool  SDL_ReadS32LE(SDL_IOStream *src, Sint32 *value);
extern  bool  SDL_ReadU32BE(SDL_IOStream *src, Uint32 *value);
extern  bool  SDL_ReadS32BE(SDL_IOStream *src, Sint32 *value);
extern  bool  SDL_ReadU64LE(SDL_IOStream *src, Uint64 *value);
extern  bool  SDL_ReadS64LE(SDL_IOStream *src, Sint64 *value);
extern  bool  SDL_ReadU64BE(SDL_IOStream *src, Uint64 *value);
extern  bool  SDL_ReadS64BE(SDL_IOStream *src, Sint64 *value);
extern  bool  SDL_WriteU8(SDL_IOStream *dst, Uint8 value);
extern  bool  SDL_WriteU16LE(SDL_IOStream *dst, Uint16 value);
extern  bool  SDL_WriteS16LE(SDL_IOStream *dst, Sint16 value);
extern  bool  SDL_WriteU16BE(SDL_IOStream *dst, Uint16 value);
extern  bool  SDL_WriteS16BE(SDL_IOStream *dst, Sint16 value);
extern  bool  SDL_WriteU32LE(SDL_IOStream *dst, Uint32 value);
extern  bool  SDL_WriteS32LE(SDL_IOStream *dst, Sint32 value);
extern  bool  SDL_WriteU32BE(SDL_IOStream *dst, Uint32 value);
extern  bool  SDL_WriteS32BE(SDL_IOStream *dst, Sint32 value);
extern  bool  SDL_WriteU64LE(SDL_IOStream *dst, Uint64 value);
extern  bool  SDL_WriteS64LE(SDL_IOStream *dst, Sint64 value);
extern  bool  SDL_WriteU64BE(SDL_IOStream *dst, Uint64 value);
extern  bool  SDL_WriteS64BE(SDL_IOStream *dst, Sint64 value);